[openuv] Fix time channels not being updated (#12558)
* [openuv] time channels not filled

Signed-off-by: clinique <gael@lhopital.org>
Signed-off-by: Simon Dengler <simon.dengler@faps.fau.de>